<resources>
    <string name="app_name" translatable="false">gcSales</string>
    <string name="buttonDownload">click me!</string>
    <string name="showedText">Fetched text</string>
    <string name="imageViewDescription">Image of the item.</string>
    <string name="defItemName">Item name</string>
    <string name="defPrice">price</string>
    <string name="loadingTitle">Loading..</string>
    <string name="category">Category:</string>
    <string name="currency">RUB</string>
    <string name="homeTitle">Home</string>
    <string name="favoritesTitle">Favorites</string>
    <string name="shoppingLists">Shopping Lists</string>
    <string name="noInternetToast">You are not connected to the internet, please select a network to work with. Opening Settings..</string>
    <string name="pleaseLogIn">To use shopping list, please log into account:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="askRegister">New user? Register!</string>
    <string name="emptyUsername">Username field is required</string>
    <string name="emptyPassword">Password field is required</string>
    <string name="invalidUser">Invalid user</string>
    <string name="loginRetry">Close</string>
    <string name="vLoginError">Unable to log in. Please check your user credentials and internet connection.</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile">Your profile</string>
    <string name="shop1">Dixy</string>
    <string name="shop2">Perekrestok</string>
    <string name="shop3">Auchan</string>
    <string name="shops">Shops</string>
    <string name="shoplist_title">ShopList Title</string>
    <string name="shoplistitems">ShopListItems</string>
    <string name="errorLoadingItems">Error loading products, please try again.</string>
    <string name="neutral_ok">OK</string>
    <string name="errorLoadingShopLists">Error loading shopping lists, please try again.</string>
    <string name="doubleBackExit">Please click BACK again to exit.</string>
    <string name="search_for_items">Search for items</string>
    <string name="all_shops">All shops</string>
    <string name="choose_categories">Choose categories</string>
    <string name="help">Help</string>
    <string name="errorLoadingShops">Error loading shops, please try again.</string>
    <string name="date_in">date in</string>
    <string name="date_out">date out</string>
    <string name="condition">special condition</string>
    <string name="quantity">Quantity:</string>
    <string name="add_to_shoplist">Add to shoplist</string>
    <string name="select_shoplist">Pick a shoplist</string>
    <string name="error_add_item_to_sl">Error adding item to shoplist, please try again.</string>
    <string name="error_removing_item_from_sl">Error removing item from shoplist, please try again.</string>
    <string name="def_shop">Shop</string>
    <string name="an_item_from_shop">An item from shop</string>
    <string name="error_loading_this_list">Error loading this shoplist. Please, try again.</string>
    <string name="new_shoplist">New shoplist</string>
    <string name="how_to_call">How the new shoplist will be called?</string>
    <string name="okk">OK</string>
    <string name="cancell">CANCEL</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="created">"Shoplist created: "</string>
    <string name="error_adding_sl">Error adding new shoplist, please try again.</string>
    <string name="delete_sl">Delete this shoplist</string>
    <string name="confirm_deleteion">You sure you want to delete it?</string>
    <string name="error_deleting_sl">Error deleting shoplist, please try again.</string>
    <string name="add_custom_item">Add a custom item</string>
    <string name="title_add_custom_item">Enter custom item name not to forget to buy it</string>
    <string name="item_added">Item added:</string>
    <string name="delete_item">Delete this item</string>
    <string name="sure_delete_item">You sure you want to delete this item?</string>
    <string name="error_loading_categories">Error loading categories, please try again..</string>
    <string name="select_category">Select a category</string>
    <string name="all_categs">All categories</string>
    <string name="action_logout">Logout</string>
    <string name="registration">Registration</string>
    <string name="already_registered">Already registered? Log in!</string>
    <string name="user_success_register">Successfully registered user</string>
    <string name="register_text">Register</string>
    <string name="hack_advice"><![CDATA[Continue without logging in (without shoplists, you will only be able to view items) >]]></string>
    <string name="add_shoplists_and_items">Add shoplists and items</string>
    <string name="loggin_out">Logging out</string>
    <string name="sure_or_not">Are you sure you want to log out?</string>
    <string name="hello_there">Welcome to gcSales! You are currently not logged in, so you can only view shops\' items. For shopping lists functionality, please register :)</string>
    <string name="title_hello_there">Hello there!</string>
    <string name="tease">Here will your shopping lists. Just hit log in and then register!</string>
    <string name="total">Total:</string>
    <string name="def_price_total">999P.</string>
    <string name="about_action">About</string>
    <string name="about">About gcSales</string>
    <string name="about_main_text">gcSales is an application where you view items from local grocery stores, add them to shoplists and share account with your family. In order to use shoplists, you need to register.</string>
    <string name="developers_and_contacts">Developers and contacts</string>
    <string name="about_dev_main">gcSales was developed under support of HSE (Higher School of Economics, Moscow).   Developers: Kupriyanov Kirill (github: Sinopsys) Surovtsev Maxim (github: diwww)  Contact: contact@gcsales.ru     Website: www.gcsales.ru   have a good day!</string>
    <string name="help_main">You have the following functionality: 1. View items for each store we have in our database. 2. Choose which category to view. 3. When you register, you will be able to add items to shopping lists and create them. 4. Edit shopping lists: add and remove items from it. 5. If there is no such item in the store, just add it directly from shoplist and it will be added as a text item. As soon as it is to appear in the shop, it will become an item, containing other items. You can add them as well! Just long click on them. 6. You can view help and about sections.</string>
</resources>
