<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight"
    tools:context="com.hes.easysales.easysales.activities.MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search_for_items"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.support.v7.widget.SearchView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_choose_categories"
        android:title="@string/choose_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/user_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>


<!--EOF-->
