<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hes.easysales.easysales.activities.RegisterActivity">

    <TextView
        android:id="@+id/askRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/etRegUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/askRegister"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegUsername"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegPassword"
        android:layout_marginBottom="10dp"
        android:text="@string/register_text" />

    <TextView
        android:id="@+id/tvBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:text="@string/already_registered"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</RelativeLayout>


    <!--EOF-->
