<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAbout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/tvAboutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryText" />

    <!--TODO LOGO-->
    <!--<ImageView-->
        <!--android:id="@+id/ivFullItem"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_below="@+id/tvShop"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:contentDescription="@string/imageViewDescription"-->
        <!--android:scaleType="fitCenter" />-->

    <TextView
        android:id="@+id/tvAboutMain"
        android:layout_below="@+id/tvAboutHeader"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/about_main_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/tvAboutDevHeader"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvAboutMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/developers_and_contacts"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/tvAboutDevMain"
        android:layout_below="@+id/tvAboutDevHeader"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/about_dev_main"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimaryText" />
</RelativeLayout>


    <!--EOF-->
